grammar.js
    source_file: ($) => seq(repeat($._statement)),

    _statement: ($) => choice($.expression_statement, $._declaration_statement),

    expression_statement: ($) =>
      choice(seq($._expression, ";"), prec(1, $._expression_ending_with_block)),

    _declaration_statement: ($) =>
      choice(
        $.const_item,
        $.empty_statement,
        $.attribute_item,
        $.inner_attribute_item,
        $.struct_item,
        $.enum_item,
        $.type_item,
        $.function_item,
        $.function_signature_item,
        $.impl_item,
        $.interface_item,
        $.associated_type,
        $.let_declaration,
        $.use_declaration,
        $.test_item,
        $.bench_item,
      ),

    // Matches non-delimiter tokens common to both macro invocations and
    // definitions. This is everything except $ and metavariables (which begin
    // with $).
    attribute_item: ($) => seq("#", "[", $.attribute, "]"),

    _option_type: ($) => seq($._base_type, optional("?")),

    attribute: ($) =>
      seq(
        $._path,
        optional(
          choice(
            seq("=", field("value", $._expression)),
            field("arguments", alias($.delim_token_tree, $.token_tree)),
          ),
        ),
      ),

    declaration_list: ($) => seq("{", repeat($._declaration_statement), "}"),

    struct_item: ($) =>
      seq(
        optional($.visibility_modifier),
        "struct",
        field("name", $._type_identifier),
        seq(field("body", $.field_declaration_list)),
      ),

    field_declaration_list: ($) =>
      seq(
        "{",
        sepBy(",", seq(repeat($.attribute_item), $.field_declaration)),
        optional(","),
        "}",
      ),

    field_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        field("name", $._field_identifier),
        ":",
        field("type", $._type),
        optional(seq("=", field("value", $._expression))),
      ),

    const_item: ($) =>
      seq(
        optional($.visibility_modifier),
        "const",
        field("name", $.identifier),
        ":",
        field("type", $._type),
        optional(seq("=", field("value", $._expression))),
        ";",
      ),

    type_item: ($) =>
      seq(
        optional($.visibility_modifier),
        "type",
        optional("alias"),
        field("name", $._type_identifier),
        // field("type_parameters", optional($.type_parameters)),
        "=",
        field("type", $._type),
        ";",
      ),

    union_type: ($) =>
      seq($._option_type, "|", optional(sepBy("|", $._option_type))),

    _type: ($) => choice($._option_type, $.union_type),

    function_item: ($) =>
      seq(
        // pub
        optional($.visibility_modifier),
        "fn",
        // function_name
        field("name", choice($.identifier, $.metavariable)),
        // <T>
        field("type_parameters", optional($.type_parameters)),
        // (a: int, b: string)
        field("parameters", $.parameters),
        // : int throws
        optional(
          choice(
            // : int throws
            seq(":", field("return_type", $._type), optional($.throws)),
            // throws ErrorType1, ErrorType2
            $.throws,
          ),
        ),
        // {}
        field("body", $.block),
      ),

    throws: ($) =>
      seq("throws", field("error_types", optional(sepBy(",", $._type)))),

    function_signature_item: ($) =>
      seq(
        optional($.visibility_modifier),
        "fn",
        field("name", choice($.identifier, $.metavariable)),
        field("type_parameters", optional($.type_parameters)),
        field("parameters", $.parameters),
        optional(
          choice(
            seq(":", field("return_type", $._type), optional($.throws)),
            $.throws,
          ),
        ),
        ";",
      ),

    closure_type: ($) =>
      seq(
        "|",
        "(",
        optional(sepBy(",", $._type)),
        ")",

        optional(
          choice(
            seq(":", field("return_type", $._type), optional("throws")),
            "throws",
          ),
        ),
        "|",
      ),

    test_item: ($) =>
      seq("test", field("name", $.string_literal), field("body", $.block)),

    bench_item: ($) =>
      seq("bench", field("name", $.string_literal), field("body", $.block)),

    impl_item: ($) =>
      seq(
        "impl",
        optional(
          seq(
            field(
              "interface",
              choice(
                $._type_identifier,
                $.scoped_type_identifier,
                $.generic_type,
              ),
            ),
            "for",
          ),
        ),
        field("type", $._type),
        choice(field("body", $.declaration_list), ";"),
      ),

    interface_item: ($) =>
      seq(
        optional($.visibility_modifier),
        "interface",
        field("name", $._type_identifier),
        field("type_parameters", optional($.type_parameters)),
        field("body", $.declaration_list),
      ),

    type_parameters: ($) =>
      prec(
        1,
        seq(
          "<",
          sepBy1(
            ",",
            choice(
              // $.lifetime,
              $.metavariable,
              $._type_identifier,
              // $.constrained_type_parameter,
              // $.optional_type_parameter,
              // $.const_parameter,
            ),
          ),
          optional(","),
          ">",
        ),
      ),

    let_declaration: ($) =>
      seq(
        "let",
        // optional($.mutable_specifier),
        field("pattern", $._pattern),
        optional(seq(":", field("type", $._type))),
        optional(seq("=", field("value", $._expression))),
        // optional(seq("else", field("alternative", $.block))),
        ";",
      ),

    use_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        "use",
        field("argument", $._use_clause),
        ";",
      ),

    _use_clause: ($) =>
      choice(
        $._path,
        $.use_as_clause,
        $.use_list,
        $.scoped_use_list,
        $.use_wildcard,
      ),

    scoped_use_list: ($) =>
      seq(field("path", optional($._path)), ".", field("list", $.use_list)),

    use_list: ($) =>
      seq("{", sepBy(",", choice($._use_clause)), optional(","), "}"),

    use_as_clause: ($) =>
      seq(field("path", $._path), "as", field("alias", $.identifier)),

    parameters: ($) =>
      seq(
        "(",
        sepBy(
          ",",
          seq(
            // #[attribute]
            optional($.attribute_item),
            choice(
              $.parameter,
              $.self_parameter,
              "_",
              // $._type,
            ),
          ),
        ),
        optional(","),
        ")",
      ),

    self_parameter: ($) =>
      seq(
        // optional("&"),
        // optional($.lifetime),
        // optional($.mutable_specifier),
        $.self,
      ),

    parameter: ($) =>
      seq(
        field("pattern", $._pattern),
        ":",
        choice(
          seq(
            field("type", $._type),
            // = default_value
            optional(seq("=", field("default", $._expression))),
          ),
          seq("..", field("type", $._type)),
        ),
      ),

    visibility_modifier: ($) => prec.right(choice($.crate, seq("pub"))),

    // Section - Types

    array_type: ($) => seq("[", field("element", $._type), "]"),

    map_type: ($) =>
      seq("<", field("key", $._type), ",", field("value", $._type), ">"),

    _expression: ($) => choice($._expression_except_range, $.range_expression),

    _expression_except_range: ($) =>
      choice(
        $.unary_expression,
        // $.reference_expression,
        $.try_expression,
        $.binary_expression,
        $.assignment_expression,
        $.compound_assignment_expr,
        $.type_cast_expression,
        $.type_assertion,
        $.call_expression,
        $.return_expression,
        $.yield_expression,
        $.throw_expression,
        $.assert_expression,
        $._literal,
        prec.left($.identifier),
        alias(choice(...primitive_types), $.identifier),
        prec.left($._reserved_identifier),
        $.self,
        $.scoped_identifier,
        $.generic_function,
        $.field_expression,
        $.array_expression,
        $.map_expression,
        $.tuple_expression,
        $.unit_expression,
        $.break_expression,
        $.continue_expression,
        $.index_expression,
        $.metavariable,
        $.closure_expression,
        $.parenthesized_expression,
        $.struct_expression,
        $._expression_ending_with_block,
        $.unwrap_expression,
      ),

    _expression_ending_with_block: ($) =>
      choice(
        // $.unsafe_block,
        $.spawn_block,
        $.defer_block,
        $.do_catch_block,
        $.block,
        $.if_expression,
        $.switch_expression,
        $.while_expression,
        $.loop_expression,
        $.for_expression,
        $.const_block,
      ),

    scoped_identifier: ($) =>
      seq(
        field(
          "path",
          optional(
            choice(
              $._path,
              $.bracketed_type,
              alias($.generic_type_with_turbofish, $.generic_type),
            ),
          ),
        ),
        ".",
        field("name", choice($.type_assertion, $.identifier, $.super)),
      ),

    range_expression: ($) =>
      prec.left(PREC.range, choice(seq("..", $._expression), "..")),

    try_expression: ($) =>
      prec(PREC.try, seq(choice("try!", "try"), $._expression)),

    // reference_expression: ($) =>
    //   prec(
    //     PREC.unary,
    //     seq("&", optional($.mutable_specifier), field("value", $._expression)),
    //   ),

    binary_expression: ($) => {
      const table = [
        [PREC.and, "&&"],
        [PREC.or, "||"],
        [PREC.bitand, "&"],
        [PREC.bitor, "|"],
        [PREC.bitxor, "^"],
        [PREC.comparative, choice("==", "!=", "<", "<=", ">", ">=")],
        [PREC.shift, choice("<<", ">>")],
        [PREC.additive, choice("+", "-")],
        [PREC.multiplicative, choice("*", "/", "%")],
      ];

      // @ts-ignore
      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              // @ts-ignore
              field("operator", operator),
              field("right", $._expression),
            ),
          ),
        ),
      );
    },

    assignment_expression: ($) =>
      prec.left(
        PREC.assign,
        seq(field("left", $._expression), "=", field("right", $._expression)),
      ),

    type_assertion: ($) => seq("(", choice("type", $._type), ")"),

    return_expression: ($) =>
      choice(prec.left(seq("return", $._expression)), prec(-1, "return")),

    assert_expression: ($) =>
      choice(
        seq("assert", $._expression),
        seq(
          choice("assert_eq", "assert_ne"),
          $._expression,
          ",",
          $._expression,
        ),
      ),

    throw_expression: ($) => seq(choice("throw", "panic"), $._expression),

    call_expression: ($) =>
      prec(
        PREC.call,
        seq(
          field("function", $._expression_except_range),
          field("arguments", $.arguments),
        ),
      ),

    arguments: ($) =>
      seq(
        "(",
        sepBy(
          ",",
          seq(
            repeat($.attribute_item),
            choice($._expression, $.keyword_argument),
          ),
        ),
        optional(","),
        ")",
      ),

    keyword_argument: ($) =>
      seq(field("key", $.identifier), ":", $._expression),

    array_expression: ($) =>
      seq(
        $.array_type,
        "{",
        seq(sepBy(",", $._expression), optional(",")),
        optional(","),
        "}",
      ),

    map_expression: ($) =>
      seq(
        $.map_type,
        "{",
        sepBy(",", seq($._literal, ":", $._expression)),
        optional(","),
        "}",
      ),

    if_expression: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", seq("(", $._condition, ")")),
          field("consequence", $.block),
          optional(field("alternative", $.else_clause)),
        ),
      ),

    let_condition: ($) =>
      seq(
        "let",
        field("pattern", $._pattern),
        "=",
        field("value", prec.left(PREC.and, $._expression)),
      ),

    _condition: ($) =>
      choice($._expression, $.let_condition, alias($._let_chain, $.let_chain)),

    switch_expression: ($) =>
      seq(
        "switch",
        field("condition", seq("(", $._condition, ")")),
        field("body", $.switch_block),
      ),

    switch_block: ($) =>
      seq(
        "{",
        optional(seq(repeat($.switch_case_arm))),
        optional($.switch_default_arm),
        "}",
      ),

    switch_case_arm: ($) =>
      prec.right(
        seq(
          seq("case", field("pattern", $._pattern)),
          ":",
          field("value", $.expression_statement),
        ),
      ),

    switch_default_arm: ($) =>
      prec.right(seq("default", ":", field("value", $.expression_statement))),

    for_expression: ($) =>
      seq(
        "for",
        "(",
        "let",
        field("pattern", $._pattern),
        optional(seq(",", $.identifier)),
        "in",
        field("value", $._expression),
        ")",
        field("body", $.block),
      ),

    closure_expression: ($) =>
      prec(
        PREC.closure,
        seq(
          field("parameters", $.closure_parameters),
          field("body", $._expression),
        ),
      ),

    closure_parameters: ($) =>
      seq("|", sepBy(",", choice($._pattern, $.parameter)), "|"),

    field_expression: ($) =>
      prec(
        PREC.field,
        seq(
          field("value", $._expression),
          ".",
          field(
            "field",
            choice($.type_assertion, $._field_identifier, $.integer_literal),
          ),
        ),
      ),

    block: ($) =>
      seq(
        optional(seq($.label, ":")),
        "{",
        repeat($._statement),
        optional($._expression),
        "}",
      ),

    // Section - Patterns

    _pattern: ($) =>
      choice(
        $._literal_pattern,
        alias(choice(...primitive_types), $.identifier),
        $.identifier,
        $.scoped_identifier,
        $.tuple_pattern,
        // $.tuple_struct_pattern,
        $.struct_pattern,
        $._reserved_identifier,
        $.ref_pattern,
        $.slice_pattern,
        $.captured_pattern,
        $.reference_pattern,
        $.remaining_field_pattern,
        $.mut_pattern,
        $.range_pattern,
        $.or_pattern,
        $.const_block,
        "_",
      ),

    _literal: ($) =>
      choice(
        $.string_literal,
        $.string_template,
        $.raw_string_literal,
        $.char_literal,
        $.bool_literal,
        $.integer_literal,
        $.float_literal,
        $.nil_literal,
      ),

    integer_literal: (_) =>
      token(
        seq(
          choice(/[0-9][0-9_]*/, /0x[0-9a-fA-F_]+/, /0b[01_]+/, /0o[0-7_]+/),
          optional(choice(...numeric_types)),
        ),
      ),

    string_literal: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice(
              alias($.unescaped_double_string_fragment, $.string_fragment),
              $.escape_sequence,
            ),
          ),
          '"',
        ),
      ),

    string_template: ($) =>
      seq(
        "`",
        repeat(
          choice(
            alias($.string_template_fragment, $.string_fragment),
            $.escape_sequence,
            $.string_template_substitution,
          ),
        ),
        "`",
      ),

    string_template_substitution: ($) => seq("${", $._expression, "}"),

    nil_literal: (_) => "nil",

    line_comment: (_) => token(seq("//", /.*/)),

    self: (_) => "self",
