test/corpus/declarations.txt
================================================================================
Function declarations
================================================================================

fn main() {}

fn add(x: int, y: float, info: string, z: ..int): int {
    return x + y + sum(..z);
}

fn takes_slice(slice: string) {
}

fn foo(): string {
    return "hello";
}

fn foo<T>(x: T?): string? {}

let a = add(99, 0.00000212, "Hello", 1, 2);

fn hello(): int? throws IoError, ValueError {
    return 1;
}

fn hello() throws IoError, ValueError {
    return 1;
}

--------------------------------------------------------------------------------

  (source_file
      (function_item
        (identifier)
        (parameters)
        (block))
      (function_item
        (identifier)
        (parameters
          (parameter
            (identifier)
            (primitive_type))
          (parameter
            (identifier)
            (primitive_type))
          (parameter
            (identifier)
            (primitive_type))
          (parameter
            (identifier)
            (primitive_type)))
        (primitive_type)
        (block
          (expression_statement
            (return_expression
              (binary_expression
                (binary_expression
                  (identifier)
                  (identifier))
                (call_expression
                  (identifier)
                  (arguments
                    (range_expression
                      (identifier)))))))))
      (function_item
        (identifier)
        (parameters
          (parameter
            (identifier)
            (primitive_type)))
        (block))
      (function_item
        (identifier)
        (parameters)
        (primitive_type)
        (block
          (expression_statement
            (return_expression
              (string_literal
                (string_fragment))))))
      (function_item
        (identifier)
        (type_parameters
          (type_identifier))
        (parameters
          (parameter
            (identifier)
            (type_identifier)))
        (primitive_type)
        (block))
      (let_declaration
        (identifier)
        (call_expression
          (identifier)
          (arguments
            (integer_literal)
            (float_literal)
            (string_literal
              (string_fragment))
            (integer_literal)
            (integer_literal))))
      (function_item
        (identifier)
        (parameters)
        (primitive_type)
        (throws
          (type_identifier)
          (type_identifier))
        (block
          (expression_statement
            (return_expression
              (integer_literal)))))
      (function_item
        (identifier)
        (parameters)
        (throws
          (type_identifier)
          (type_identifier))
        (block
          (expression_statement
            (return_expression
              (integer_literal))))))

================================================================================
Variable declarations
================================================================================

let x: int = 5;
const API_HOST: string = "https://api.example.com";
const a = 5;
let a = ["Foo", "Bar"];
let b = { "Foo": 1, "Bar": 2 };
let c: string = `foo`;

--------------------------------------------------------------------------------

    (source_file
      (let_declaration
        (identifier)
        (primitive_type)
        (integer_literal))
      (const_item
        (identifier)
        (primitive_type)
        (string_literal
          (string_fragment)))
      (const_item
        (identifier)
        (integer_literal))
      (let_declaration
        (identifier)
        (array_expression
          (string_literal
            (string_fragment))
          (string_literal
            (string_fragment))))
      (let_declaration
        (identifier)
        (map_expression
          (string_literal
            (string_fragment))
          (integer_literal)
          (string_literal
            (string_fragment))
          (integer_literal)))
      (let_declaration
        (identifier)
        (primitive_type)
        (string_template
          (string_fragment))))

================================================================================
Use
================================================================================

use std.json;
use std.net.http.{self, Headers, Request};

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    (scoped_identifier
      (identifier)
      (identifier)))
  (use_declaration
    (scoped_use_list
      (scoped_identifier
        (scoped_identifier
          (identifier)
          (identifier))
        (identifier))
      (use_list
        (self)
        (identifier)
        (identifier)))))

================================================================================
Struct
================================================================================

struct User {
    name: string,
    email: string?,
}

--------------------------------------------------------------------------------

(source_file
  (struct_item
    (type_identifier)
    (field_declaration_list
      (field_declaration
        (field_identifier)
        (primitive_type))
      (field_declaration
        (field_identifier)
        (primitive_type)))))

================================================================================
String interpolation
================================================================================

let name = "Alice";
let greeting = `Hello,\n ${name} ${name.to_int() + 1 + 2 + "foo"}!`;
let c = `foo`;

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (identifier)
    (string_literal
      (string_fragment)))
  (let_declaration
    (identifier)
    (string_template
      (string_fragment)
      (escape_sequence)
      (string_fragment)
      (string_template_substitution
        (identifier))
      (string_fragment)
        (string_template_substitution
        (binary_expression
            (binary_expression
            (binary_expression
                (call_expression
                (field_expression
                    (identifier)
                    (field_identifier))
                (arguments))
                (integer_literal))
            (integer_literal))
            (string_literal
            (string_fragment))))
      (string_fragment)))
  (let_declaration
    (identifier)
    (string_template
      (string_fragment))))

================================================================================
Test & Bench
================================================================================

test "hello" {
    assert_eq 1, 1;
}

bench "hello" {
    assert_eq 1, 1;
}

--------------------------------------------------------------------------------

(source_file
    (test_item
    (string_literal
        (string_fragment))
    (block
        (expression_statement
        (assert_expression
            (integer_literal)
            (integer_literal)))))
    (bench_item
    (string_literal
        (string_fragment))
    (block
        (expression_statement
        (assert_expression
            (integer_literal)
            (integer_literal))))))

================================================================================
Try & Throw statement
================================================================================

try item.method();
try! item.method();

throw "error";

--------------------------------------------------------------------------------

(source_file
    (expression_statement
    (try_expression
        (call_expression
        (field_expression
            (identifier)
            (field_identifier))
        (arguments))))
    (expression_statement
    (try_expression
        (call_expression
        (field_expression
            (identifier)
            (field_identifier))
        (arguments))))
    (expression_statement
    (throw_expression
        (string_literal
        (string_fragment)))))

================================================================================
If let & For let
================================================================================

if (let a = value) {
}

for (let a in values) {
}

for (let key, value in values) {
}

--------------------------------------------------------------------------------

(source_file
    (expression_statement
    (if_expression
        (let_condition
        (identifier)
        (identifier))
        (block)))
    (expression_statement
    (for_expression
        (identifier)
        (identifier)
        (block)))
    (expression_statement
    (for_expression
        (identifier)
        (identifier)
        (identifier)
        (block))))

================================================================================
Type Assertion
================================================================================

let b = a.(string);

if (let b = value.(type)) {
}

--------------------------------------------------------------------------------

(source_file
    (let_declaration
    (identifier)
    (field_expression
        (identifier)
        (type_assertion
        (primitive_type))))
    (expression_statement
    (if_expression
        (let_condition
        (identifier)
        (field_expression
            (identifier)
            (type_assertion)))
        (block))))

================================================================================
Function Declaration with Map, Option
================================================================================

pub fn option_params(a: string, b: int?, c: int = 100, d: ..int?): <string, int?> throws {
}

fn test(named_values: <string, int?>): <string, int?> {
}

--------------------------------------------------------------------------------

(source_file
    (function_item
    (visibility_modifier)
    (identifier)
    (parameters
        (parameter
        (identifier)
        (primitive_type))
        (parameter
        (identifier)
        (primitive_type))
        (parameter
        (identifier)
        (primitive_type)
        (integer_literal))
        (parameter
        (identifier)
        (primitive_type)))
    (map_type
        (primitive_type)
        (primitive_type))
    (throws)
    (block))
    (function_item
    (identifier)
    (parameters
        (parameter
        (identifier)
        (map_type
            (primitive_type)
            (primitive_type))))
    (map_type
        (primitive_type)
        (primitive_type))
    (block)))

================================================================================
Closure Expression
================================================================================

let a = |x: int, y: int| {
    return x + y;
};

call(|x, y| {
    return x + y;
});

--------------------------------------------------------------------------------

(source_file
    (let_declaration
    (identifier)
    (closure_expression
        (closure_parameters
        (parameter
            (identifier)
            (primitive_type))
        (parameter
            (identifier)
            (primitive_type)))
        (block
        (expression_statement
            (return_expression
            (binary_expression
                (identifier)
                (identifier)))))))
    (expression_statement
    (call_expression
        (identifier)
        (arguments
        (closure_expression
            (closure_parameters
            (identifier)
            (identifier))
            (block
            (expression_statement
                (return_expression
                (binary_expression
                    (identifier)
                    (identifier))))))))))


================================================================================
Keyword Arugments
================================================================================

fn hello(name: string, city: string? = nil, infos: ..int) {
}

hello("Jason Lee", city: "Chengdu", 1, 2, 3);

--------------------------------------------------------------------------------

    (source_file
      (function_item
        (identifier)
        (parameters
          (parameter
            (identifier)
            (primitive_type))
          (parameter
            (identifier)
            (primitive_type)
            (nil_literal))
          (parameter
            (identifier)
            (primitive_type)))
        (block))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (string_literal
              (string_fragment))
            (keyword_argument
              (identifier)
              (string_literal
                (string_fragment)))
            (integer_literal)
            (integer_literal)
            (integer_literal)))))

================================================================================
Map initialization
================================================================================

let a = {
    "a": 1,
    "b": 2,
};
let a: <string, string> = {:};
let a: <string, int> = { "a": 1, "b": 2 };

--------------------------------------------------------------------------------

    (source_file
      (let_declaration
        (identifier)
        (map_expression
          (string_literal
            (string_fragment))
          (integer_literal)
          (string_literal
            (string_fragment))
          (integer_literal)))
      (let_declaration
        (identifier)
        (map_type
          (primitive_type)
          (primitive_type))
        (map_expression))
      (let_declaration
        (identifier)
        (map_type
          (primitive_type)
          (primitive_type))
        (map_expression
          (string_literal
            (string_fragment))
          (integer_literal)
          (string_literal
            (string_fragment))
          (integer_literal))))

================================================================================
Array initialization
================================================================================

let a = [1, 2, 3];
let b: [string] = [];
let c: [string] = ["a", "b", "c"];

--------------------------------------------------------------------------------

    (source_file
      (let_declaration
        (identifier)
        (array_expression
          (integer_literal)
          (integer_literal)
          (integer_literal)))
      (let_declaration
        (identifier)
        (array_type
          (primitive_type))
        (array_expression))
      (let_declaration
        (identifier)
        (array_type
          (primitive_type))
        (array_expression
          (string_literal
            (string_fragment))
          (string_literal
            (string_fragment))
          (string_literal
            (string_fragment)))))
